* Fixed extra spec loading
* Added *Association#columns
* Some refactoring in AdvancedLoadCommand regarding :include options
* Added support for class-less Mappings::Table instances, with just a string name
* HasAndBelongsToManyAssociation#join_table #left_foreign_key and #right_foreign_key reference actual Table or Column objects now
* Added :shallow_include option for HABTM joins in AdvancedLoadCommand and corresponding spec
* Added Commands::AdvancedConditions
* Added ORDER, LIMIT, OFFSET and WHERE support to AdvancedLoadCommand
* Renamed spec/has_many.rb to spec/has_many_spec.rb
* Tweaked the loading of has_many relationships; big performance boost; got rid of an extra query
* Added EmbeddedValue support, and accompanying spec
* Fleshed out AdvancedConditions a bit; added conditions_spec.rb
* Added more AdvancedConditions specs
* Added Loader to handle multi-instanced rows
* AdvancedLoadCommand replaced LoadCommand; down to 3 failing specs
* All specs pass
* Added :intercept_load finder option and accompanying spec
* Modified :intercept_load block signature to |instance,columns,row|
* HasAndBelongsToMany works, all specs pass
* Fixed a couple bugs with keys; Added DataMapper::Base#key= method
* Made DataMapper::Base#lazy_load! a little more flexible
* Removed LoadCommand overwrites from MysqlAdapter
* Default Database#single_threaded mode is true now
* Removed MysqlAdapter#initialize, which only served to setup the connections, moved to SqlAdapter
* Added SqlAdapter#create_connection and SqlAdapter#close_connection abstract methods
* Added MysqlAdapter#create_connection and MysqlAdapter#close_connection concrete methods
* Made SqlAdapter#connection a concrete method (instead of abstract), with support for single_threaded operation
* Database#setup now takes a Hash of options instead of a block-initializer
* Validation chaining should work for all association types
* Save chaining should work for has_many associations